--- a/js/app/templates/home/profile.html
+++ b/js/app/templates/home/profile.html
@@ -1,6 +1,6 @@
 <div class="profile-avatar">
     <a href="#/profile" class="profilelink"><img src="{{user.info.image}}" class="img-circle img-thumbnail"/></a>
-    <div class="profile-name"> {{user.info.name}}</div>
+    <div class="profile-name"> {{user.info.related.name}}</div>
 <!--     <div class="site-role label label-primary"> {{user.role.role}} </div> -->
 </div>
 <ul class="profile-updates">
