--- a/js/app/templates/home/survey.html
+++ b/js/app/templates/home/survey.html
@@ -3,7 +3,7 @@
 </div>
 <div class="panel-body">
       <div class="row">
-      <div class="col-md-6 ">
+      <div class="col-md-12 ">
         <div class="list-group list-group-survey shadow-bottom-m">
           <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span>{{subtitle_new}}</div>
           {{#each campus_survey-new}}
@@ -11,13 +11,13 @@
           {{/each}}
         </div>
       </div>
-      <div class="col-md-6 ">
-            <div class="list-group list-group-survey  shadow-bottom-m">
-                <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_popular}}</div>
-                {{#each campus_survey-popular}}
-                <a data-item-id="{{id}}"  href="#campus/surveys/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'><b>{{numVoted}}</b> votes</span></a>
-                {{/each}}
-          </div>
-      </div>
+<!--       <div class="col-md-6 ">
+      <div class="list-group list-group-survey  shadow-bottom-m">
+          <div class="list-group-item title"><span class="title-icon glyphicon glyphicon-list"></span> {{subtitle_popular}}</div>
+          {{#each campus_survey-popular}}
+          <a data-item-id="{{id}}"  href="#campus/surveys/{{id}}" class="list-group-item item-{{id}}"><span class="">{{title}}</span><span class='pull-right date'><b>{{numVoted}}</b> votes</span></a>
+          {{/each}}
+    </div>
+</div> -->
   </div>
 </div>
