--- a/css/app/module.css
+++ b/css/app/module.css
@@ -361,10 +361,10 @@ sidebar nav list
 
 .panel {
     border-radius: 4px;
-    border: 1px solid #eee;
-    /* box-shadow: 0 0 0 1px #fafafa inset, 0 1px 4px 0px #aaa; */
-    -webkit-box-shadow: 2px 3px 10px #D3D3D3;
-    box-shadow: 2px 3px 10px #D3D3D3;
+    border: 1px solid #E6E6E6;
+    
+    -webkit-box-shadow: 1px 1px 7px #C5C5C5;
+    box-shadow: 1px 1px 7px #C5C5C5;
     border-radius: 0px;
     /* font-family: "Helvetica Neue",Helvetica,verdana,Arial,sans-serif; */
     font-size: 12px;
@@ -777,7 +777,7 @@ a.profilelink:hover img{
     padding-left:0;
     font-size: 11px;
     text-align: left;
-    margin-left:0px;
+    margin-left:15%;
     color:#999 ;
 }
 
@@ -907,6 +907,13 @@ a.profilelink:hover img{
 
 .campus-item .trcode .popover-title{
     white-space: nowrap;
+    background: #c7c7c7;
+}
+
+.campus-item .trcode .popover-content{
+    padding: 20px 60px;
+    text-align: left;
+    font-weight: bolder;
 }
 
 .campus-item .banner {
@@ -939,6 +946,9 @@ a.profilelink:hover img{
     margin-left: 5px;
     position: relative;
     top: 2px;
+    font-family: sans-serif;
+    font-weight: bold;
+    font-size: 1.2em;
 }
 
 .campus-item .banner-right .dropdown-menu-xs {
@@ -1208,6 +1218,10 @@ a.profilelink:hover img{
     border-bottom: 1px solid #ddd;
     margin: 0 20px 10px 20px;
     position: relative;
+}
+
+.profilepage .panel-list .panel-head.noresult h1{
+    color: #aaa;
 }
 
 .profilepage .panel-list .panel-head-right {
