--- a/js/app/templates/partials/trainingitem.html
+++ b/js/app/templates/partials/trainingitem.html
@@ -6,9 +6,18 @@
     <span class="glyphicon glyphicon-globe"></span> <b>{{campus_training.room}}</b> <span class="splitter"> | </span>
     <span>Difficulty:</span> {{campus_training.Rank}}
     <span class="banner-right">
-         <span class="numjoined label label-primary">{{campus_training.numJoined}}</span>
+         <span class="numjoined label"><img src="images/loading.gif"/></span>
         {{#if campus_training.available}}
-        <span class="btnJoin"><a href="{{campus_training.joinLink}}" class="btn btn-default btn-xs">register</a></span>
+
+            {{#if campus_training.done}}
+                <span class="text-muted"> attended </span>
+            {{else}}
+                    {{#if campus_training.joined}}
+                        <span class="btnJoin"><a href="{{campus_training.joinLink}}" target="_blank" class="btn btn-success btn-xs">Unregister</a></span>
+                    {{else}}
+                        <span class="btnJoin"><a href="{{campus_training.joinLink}}" target="_blank" class="btn btn-primary btn-xs">register</a></span>
+                    {{/if}}
+            {{/if}}
         {{else}}
         <span class="text-muted"> closed </span>
         {{/if}}
@@ -22,7 +31,7 @@
 <div class="attachments">
     <span class="glyphicon glyphicon-paperclip"></span> 
     {{#each campus_training.attachments}}
-        <span class="attach_{{@index}} item"><a target="_blank" class="label label-primary" href="{{ServerRelativeUrl}}">{{FileName}}</a></span> <span class="splitter"></span>
+        <span class="attach_{{@index}} item"><a target="_blank" class="label label-default" href="{{ServerRelativeUrl}}">{{FileName}}</a></span> <span class="splitter"></span>
     {{/each}}
 </div>
 {{/if}}
