--- a/js/app/templates/partials/trainingpagelist.html
+++ b/js/app/templates/partials/trainingpagelist.html
@@ -9,9 +9,9 @@
   <td>{{Rank}}</td>
   <td>{{category}}</td>
   {{#if available}}
-  <td class="text-primary"><a href="joinLink" target="_blank">available</a></td>
+    <td class="text-primary"><a href="{{joinLink}}" target="_blank">available</a></td>
   {{else}}
-  <td class="text-muted">closed</td>
+    <td class="text-muted">closed</td>
   {{/if}}
 </tr>
 {{/each}}
