--- a/js/app/templates/partials/trainingitem.html
+++ b/js/app/templates/partials/trainingitem.html
@@ -8,16 +8,23 @@
     <span class="banner-right">
          <span class="numjoined label"><img src="images/loading.gif"/></span>
         {{#if campus_training.available}}
-
-            {{#if campus_training.done}}
-                <span class="text-muted"> attended </span>
+            {{#ifCond ../curUserId campus_training.authorId}}
+                <span class="btnJoin"><a href="{{campus_training.joinLink}}" target="_blank" class="btn btn-default btn-xs">I am trainer</a></span>
             {{else}}
-                    {{#if campus_training.joined}}
-                        <span class="btnJoin"><a href="{{campus_training.joinLink}}" target="_blank" class="btn btn-success btn-xs">Unregister</a></span>
-                    {{else}}
-                        <span class="btnJoin"><a href="{{campus_training.joinLink}}" target="_blank" class="btn btn-primary btn-xs">register</a></span>
-                    {{/if}}
-            {{/if}}
+                {{#if campus_training.done}}
+                    <span class="text-muted"> attended </span>
+                {{else}}
+                        {{#if campus_training.joined}}
+                            <span class="btnJoin"><a href="{{campus_training.joinLink}}" target="_blank" class="btn btn-success btn-xs">Unregister</a></span>
+                        {{else}}
+                            {{#if campus_training.outdated}}
+                                <span class="btnJoin"><a href="{{campus_training.joinLink}}" class="btn btn-warning  btn-xs" target="_blank"  > Out of Date </a></span>
+                            {{else}}
+                                <span class="btnJoin"><a href="{{campus_training.joinLink}}" target="_blank" class="btn btn-primary btn-xs">register</a></span>
+                            {{/if}}
+                        {{/if}}
+                {{/if}}
+            {{/ifCond}}
         {{else}}
         <span class="text-muted"> closed </span>
         {{/if}}
@@ -31,7 +38,7 @@
 <div class="attachments">
     <span class="glyphicon glyphicon-paperclip"></span> 
     {{#each campus_training.attachments}}
-        <span class="attach_{{@index}} item"><a target="_blank" class="label label-default" href="{{ServerRelativeUrl}}">{{FileName}}</a></span> <span class="splitter"></span>
+        <span class="attach_{{@index}} item"><a target="_blank" class="label label-default" title="{{FileName}}" href="{{ServerRelativeUrl}}">{{truncate FileName 20}}</a></span>
     {{/each}}
 </div>
 {{/if}}
