--- a/js/app/templates/partials/surveylist.html
+++ b/js/app/templates/partials/surveylist.html
@@ -13,7 +13,7 @@
 	</div>
 	<div class="banner">
 	    <span class="glyphicon glyphicon-user"></span> <b>{{author}}</b> <span class="splitter"> | </span>
-	    <span class="glyphicon glyphicon-calendar"></span> {{pubdate}}
+	    <span class="glyphicon glyphicon-calendar"></span> {{formatDate pubdate}}
 	</div>
 	<div class="content">
 	   <p>{{{content}}}</p>
