--- a/js/app/templates/home/layout.html
+++ b/js/app/templates/home/layout.html
@@ -1,7 +1,7 @@
 <div class="col-md-10 column-main">
       <section class="panel panel-container panel-default panel-news shadow-bottom-lr"></section>
       <section class="panel panel-container panel-default panel-updates"></section>
-      <section class="panel-notify ">
+      <section class="panel-notify panel-container">
         <div class="">
              <div class="row">
                   <div class="col-md-5 ">
