--- a/js/app/templates/general/listpagebase.html
+++ b/js/app/templates/general/listpagebase.html
@@ -55,7 +55,7 @@
             {{#if tableColumns}}
             <thead>
               <tr>
-                <th class="th_index">#</th>
+                <th class="th_index">&nbsp;</th>
                 {{#each tableColumns}}
                 <th>{{this}}</th>
                 {{/each}}
