--- a/js/app/templates/layouts/header.html
+++ b/js/app/templates/layouts/header.html
@@ -2,4 +2,4 @@
     <img src="images/ralogo.gif" />
     <img src= "images/listenthinksolve-horz.gif"/>
 </a>
-<p class="signed-user ">signed in as<a href="#/profile" class="navbar-link signed-user-account btn-embed">{{user.account}}</a></p>
+<p class="signed-user ">signed in as<a href="#/profile" class="navbar-link signed-user-account btn-embed">{{user.name}}</a></p>
