--- a/js/app/templates/partials/empitem.html
+++ b/js/app/templates/partials/empitem.html
@@ -13,12 +13,9 @@
         {{/unless}}
     </div>
     <div class="col-md-7 info">
-        <p class="name">{{contacts.name}}
-        </p>
+        <p class="name">{{contacts.name}}</p>
         <p class="chinese">{{contacts.chinesename}}</p>
-        <p class="title">
-            <a href="mailto: {{contacts.email}}" class="">{{contacts.email}}</a>
-        </p>
+         <p class="title">{{contacts.title}}</p>
         <dl class="below dl-horizontal">
             <dt>project</dt>
             <dd>{{contacts.project}}</dd>
