update font in css to em

--- a/css/app/cssfamilytree.css
+++ b/css/app/cssfamilytree.css
@@ -94,7 +94,7 @@ right connector from last child*/
     text-decoration: none;
     color: #666;
     font-family: arial, verdana, tahoma;
-    font-size: 11px;
+    font-size: .91em;
     display: inline-block;
     
     border-radius: 5px;
