--- a/js/app/templates/home/layout.html
+++ b/js/app/templates/home/layout.html
@@ -13,7 +13,7 @@
           </div>
         </div>
       </section>
-      <section class="panel panel-container panel-default panel-survey"></section>   
+      <!-- <section class="panel panel-container panel-default panel-survey"></section> -->   
 </div>
 <div class="col-md-2 column-right-side">
       <section class="panel panel-default  panel-container panel-profile"></section>
