--- a/js/app/templates/home/notify_newhire.html
+++ b/js/app/templates/home/notify_newhire.html
@@ -21,7 +21,7 @@
                     </a>
                 </div>
                 <div class="col-sm-9 intro">
-                  <p class="statement">{{intro}}</p>
+                  <p class="statement" data-item-index="{{@index}}">{{{intro}}}</p>
                   <p class="small"><span class="name site-role label label-primary">{{name}}</span><span class="team">{{team}}</span><span class="project">{{project}}</span></p>
                 </div>
               </div>
