--- a/css/app/base.css
+++ b/css/app/base.css
@@ -1,5 +1,6 @@
 body{
     font-size:12px;
+    line-height: 1.4;
     /* font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif !important; */
 }
 
