--- a/js/app/templates/general/modalbase.html
+++ b/js/app/templates/general/modalbase.html
@@ -1,4 +1,4 @@
-<div class="modal-dialog">
+<div class="modal-dialog {{modal-class}}">
     <div class="modal-content {{contentClass}}">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">
